# overwatch-orthophotos

./: .dockerignore  .gitignore  LICENSE  README.md  data  docker-compose.yml  pyproject.toml
configs/: .gitignore  dev.yml  template.yml  test.yml
containers/: odm-tools.dockerfile
src/odm_tools/: __init__.py  auth.py  cli.py  config.py  io.py  models.py  notifier.py  preproc.py  processor.py  service.py  uploader.py  utils.py
tests/: conftest.py  test_auth.py  test_ckan.py  test_models.py  test_notifier.py
tools/: consume.py  exif.py  filter.py  read_exif.py  rename.py
