[project]
name = "odm-tools"
version = "0.1.0"
description = "Orthorectification tool for the OVERWATCH project"
readme = "README.md"
authors = [
    { name = "Edoardo Arnaudo", email = "edoardo.arnaudo@linksfoundation.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "aiofiles>=24.1.0",
    "argdantic[all]>=1.3.3",
    "geopy>=2.4.1",
    "pydantic-geojson>=0.2.0",
    "pyodm>=1.5.12, < 2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "shapely>=2.1.1",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.13",
    ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
odm-tools = "odm_tools.cli:main"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

