[project]
name = "odm-tools"
version = "0.1.0"
description = "Orthorectification tool for the OVERWATCH project"
readme = "README.md"
authors = [
    { name = "Edoardo Arnaudo", email = "edoardo.arnaudo@linksfoundation.com" },
]
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "aiofiles>=24.1.0",
    "argdantic[all]>=1.3.3",
    "authlib>=1.6.0",
    "exif>=1.6.1",
    "geojson-pydantic>=2.1.0",
    "geopy>=2.4.1",
    "pyexiv2>=2.15.5",
    "pyodm>=1.5.12, < 2",
    "python-dotenv>=1.1.0",
    "rasterio>=1.4.3",
    "requests>=2.32.3",
    "shapely>=2.1.1",
    "structlog>=25.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
odm-tools = "odm_tools.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
